--- a/unify_existing_code/1_the_basics/1_0_lazy_vs_eager.ipynb
+++ b/unify_existing_code/1_the_basics/1_0_lazy_vs_eager.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "file: \"unify_existing_code/1_the_basics/1_0_lazy_vs_eager.ipynb\"\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -25,7 +35,8 @@
    "metadata": {},
    "source": [
     "::::: {#colab-button}\n",
-    "[![](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/unifyai/demos/blob/main/unify_existing_code/1_the_basics/1_0_lazy_vs_eager.ipynb)\n",
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/unifyai/demos/blob/main/{{< meta file >}})\n",
+    "[![GitHub](https://badgen.net/badge/icon/github?icon=github&label)](https://github.com/unifyai/demos/blob/main/{{< meta file >}})\n",
     ":::::"
    ]
   },
