Added set_default_device(gpu:0) as model creation isn't working with the default device being a cpu which is the default in ivy currently so it would be a blocker for the release otherwise (#62)

--- a/examples_and_demos/alexnet_demo.ipynb
+++ b/examples_and_demos/alexnet_demo.ipynb
@@ -175,6 +175,7 @@
       "outputs": [],
       "source": [
         "import ivy\n",
+        "ivy.set_default_device(\"gpu:0\")\n",
         "ivy.set_backend(\"torch\")\n",
         "\n",
         "from ivy_models.alexnet import alexnet\n",
