--- a/examples_and_demos/bert_demo.ipynb
+++ b/examples_and_demos/bert_demo.ipynb
@@ -81,6 +81,7 @@
       "source": [
         "import torch\n",
         "import ivy\n",
+        "ivy.set_default_device(\"gpu:0\")\n",
         "import ivy_models\n",
         "from transformers import AutoModel, AutoTokenizer\n",
         "import warnings\n",
