--- a/examples_and_demos/image_segmentation_with_ivy_unet.ipynb
+++ b/examples_and_demos/image_segmentation_with_ivy_unet.ipynb
@@ -60,6 +60,7 @@
       "outputs": [],
       "source": [
         "import ivy\n",
+        "ivy.set_default_device(\"gpu:0\")\n",
         "import torch\n",
         "import numpy as np"
       ]
