--- a/examples_and_demos/resnet_demo.ipynb
+++ b/examples_and_demos/resnet_demo.ipynb
@@ -70,6 +70,7 @@
       "outputs": [],
       "source": [
         "import ivy\n",
+        "ivy.set_default_device(\"gpu:0\")\n",
         "import torch"
       ]
     },
