--- a/examples_and_demos/mmpretrain_to_jax.ipynb
+++ b/examples_and_demos/mmpretrain_to_jax.ipynb
@@ -61,6 +61,7 @@
       "source": [
         "import jax\n",
         "import ivy\n",
+        "ivy.set_default_device(\"gpu:0\")\n",
         "import torch\n",
         "import requests\n",
         "import numpy as np\n",
